Commit final v2: adicionados cabeçalho e notas md

--- a/Coleta_LaBioCoM/Preto_aulas_process/Raul/Raul/Vertical_jump01/g4_vertJumpAnalysis.ipynb
+++ b/Coleta_LaBioCoM/Preto_aulas_process/Raul/Raul/Vertical_jump01/g4_vertJumpAnalysis.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### RIB 0110 - Fundamentos de Informática em Biomecânica\n",
+    "# Trabalho Prático \"Raulito\" Vicon, grupo 4\n",
+    "#### Integrantes: Carlos Lima, Gabriel Luciano, Guilherme Porto e Raul Sousa"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "NOTICE: Run using conda environment with ezc3d installed"
    ]
   },
@@ -85,6 +94,13 @@
     "#print('analog2\\'s shape: ',analog2.shape)\n",
     "#print('point3\\'s shape: ',point3.shape)\n",
     "#print('analog3\\'s shape: ',analog3.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A ideia inicial do trabalho era fazer uma análise de cunho comparativo entre algum parâmetro de diferentes saltos. Entretanto, devido a problemas relacionados à qualidade das capturas dos saltos 2 e 3, decidimos trabalhar somente com o salto 1, e aplicar uma abordagem mais descritiva e exploratória. Por isso há tantos comandos comentados acima."
    ]
   },
   {
@@ -680,7 +696,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Nota-se que tanto faz calcular o impulso das seguintes formas, sendo o resultado praticamente o mesmo:\n",
+    "##### Nota-se que tanto faz calcular o impulso das seguintes formas, sendo o resultado praticamente o mesmo:\n",
     "\n",
     "1. A força resultante média aplicada sobre as plataformas desde o ponto de mínimo até o ponto de máximo, vezes este intervalo de tempo\n",
     "\n",
